# hl-rs

./: Cargo.toml  README.md
src/: consts.rs  eip712.rs  error.rs  http.rs  lib.rs  types.rs
src/clients/: mod.rs
src/clients/exchange/: action.rs  action_kind.rs  builder.rs  client.rs  mod.rs
src/clients/exchange/requests/: actions.rs  mod.rs  modify.rs  orders.rs
src/clients/exchange/requests/actions/: mod.rs  perp_deploy.rs
src/clients/info/: mod.rs  types.rs
src/utils/: mod.rs  signing.rs
