[package]
name = "hl-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.42"
chrono = "0.4.42"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.28"
reqwest = "0.12.24"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }
